Bug 204941 - Reset CPU mask after setting it in trace-cmd record with option -M
Summary: Reset CPU mask after setting it in trace-cmd record with option -M
Status: RESOLVED CODE_FIX
Alias: None
Product: Tools
Classification: Unclassified
Component: Trace-cmd/Kernelshark (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Default virtual assignee for Trace-cmd and kernelshark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-21 18:09 UTC by Steven Rostedt
Modified: 2020-01-31 20:02 UTC (History)
1 user (show)

See Also:
Kernel Version: N/A
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Steven Rostedt 2019-09-21 18:09:37 UTC
I recorded a test case with:

 trace-cmd record -e all -M 4 ./userspin

And then ran

 trace-cmd record -e all ./userspin

and saw that the tracing CPU mask was still set with 4  when I wanted all CPUs.

The trace-cmd record should put back the original value after using -M for the tracing cpu masks.
Comment 1 Steven Rostedt 2019-09-21 18:10:40 UTC
 I'm currently traveling and may be slow to respond. I'll be back at my normal
 hours on Monday, September 30th.

-- Steve
Comment 2 Tzvetomir Stoyanov (VMware) 2019-09-25 11:10:40 UTC
Fixed by commit 
https://patchwork.kernel.org/patch/11160423/
Comment 3 Steven Rostedt 2019-09-25 11:11:45 UTC
 I'm currently traveling and may be slow to respond. I'll be back at my normal
 hours on Monday, September 30th.

-- Steve
Comment 4 Steven Rostedt 2020-01-31 20:02:39 UTC
Fixed by: 4d4db27bd911 ("trace-cmd: Reset CPU mask after setting it in trace-cmd record with option -M")

Note You need to log in before you can comment on or make changes to this bug.